--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -3,6 +3,7 @@ $darkGrayBackground: #19353E;
 $modalBackground: #e5e5e9;
 //Text
 $textMainColor: #19353E;
+$disabledColor: #989898;
 
 $primary: #27B3B8;
 $primaryLight: #CCEAE9;
