listing + search result page

--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -10,6 +10,7 @@ $primaryLight: #CCEAE9;
 $primaryDark: #1C8185;
 $secondary: #009892;
 $tertiary: #F4704D;
+$tertiaryLight: #FDF0ED;
 $borderColor: #CCEAE9;
 $warning: #F39131;
 
